--- a/style.css
+++ b/style.css
@@ -35,6 +35,19 @@ header {
   border-radius: 5px;
 }
 
+/* Hamburger open animation */
+.menu-toggle.open .bar:nth-child(1) {
+  transform: rotate(45deg) translate(5px, 5px);
+}
+
+.menu-toggle.open .bar:nth-child(2) {
+  opacity: 0;
+}
+
+.menu-toggle.open .bar:nth-child(3) {
+  transform: rotate(-45deg) translate(6px, -6px);
+}
+
 /* Hamburger Menu (Button) */
 .menu-toggle {
   display: none;
